--- a/style.css
+++ b/style.css
@@ -1,42 +1,58 @@
+body {
+    background: #24273a;
+    color: #cad3f5;
+    font-family: 'Verdana';
+}
+
 .nonogram-grid {
     display: grid;
     grid-template-columns: repeat(var(--cols), 1fr);
     width: min-content;
-}
 
-.nonogram-grid input {
-    display: none;
-}
+    & input {
+        display: none;
+    }
 
-.nonogram-grid label {
-    width: 2rem;
-    height: 2rem;
-    background: #cad3f5;
-    border: 2px solid #24273a;
-    border-radius: 4px;
-}
+    & label,
+    & .hint {
+        width: 1.2rem;
+        height: 1.2rem;
+        background: #cad3f5;
+        border: 2px solid #24273a;
+        border-radius: 4px;
+    }
 
-.nonogram-grid label.checked {
-    background: #f5a97f;
-}
+    & .hint {
+        background: #363a4f;
+        border: 2px solid #24273a;
+        border-radius: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.8rem;
 
-.nonogram-grid label.crossed {
-    /* background: #5b6078; */
-    position: relative;
-}
+        &.blank {
+            background: transparent;
+        }
+    }
 
-label.crossed::after {
-    display: flex;
-    content: "✱";
-    color: #5b6078;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
+    & label {
+        &.checked {
+            background: #f5a97f;
+        }
 
-body {
-    background: #24273a;
-    color: #cad3f5;
-}
+        &.crossed {
+            position: relative;
 
+            &::after {
+                display: flex;
+                content: "✱";
+                color: #5b6078;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
